--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="hero-right">
-        <img src="/assets/pic.jpeg" alt="Shoaib">
+        <img src="assets/pic.jpeg" alt="Shoaib">
     </div>
 </section>
 
@@ -112,4 +112,5 @@
 <script src="script.js"></script>
 
 </body>
+
 </html>
