--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2>Contact</h2>
     </div>
     <div class="contact-container">
-        <form action="https://formspree.io/f/malikshoaibsultan732@gmail.com" method="POST">
+        <form action="malikshoaibsultan732@gmail.com" method="POST">
             <div class="form-group"><input type="text" name="name" placeholder="Name" required></div>
             <div class="form-group"><input type="email" name="email" placeholder="Email" required></div>
             <div class="form-group"><textarea name="message" rows="4" placeholder="Message" required></textarea></div>
@@ -114,4 +114,5 @@
 </body>
 
 </html>
+
 
