--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
         <h2>Contact</h2>
     </div>
     <div class="contact-container">
-        <form action="malikshoaibsultan732@gmail.com" method="POST">
-            <div class="form-group"><input type="text" name="name" placeholder="Name" required></div>
-            <div class="form-group"><input type="email" name="email" placeholder="Email" required></div>
-            <div class="form-group"><textarea name="message" rows="4" placeholder="Message" required></textarea></div>
-            <button type="submit" class="submit-btn">Send Message</button>
-        </form>
+       <form action="mailto:malikshoaibsultan732@gmail.com" method="post" enctype="text/plain">
+    <div class="form-group"><input type="text" name="name" placeholder="Name" required></div>
+    <div class="form-group"><input type="email" name="email" placeholder="Email" required></div>
+    <div class="form-group"><textarea name="message" rows="4" placeholder="Message" required></textarea></div>
+    <button type="submit" class="submit-btn">Send Message</button>
+</form>
         <div class="footer-social">
             <a href="#"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/m-shoaib-087155221?utm_source=share_via&utm_content=profile&utm_medium=member_android"><i class="fa-brands fa-linkedin"></i></a>
@@ -114,5 +114,6 @@
 </body>
 
 </html>
+
 
 
