--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
         <h2>Contact</h2>
     </div>
     <div class="contact-container">
-       <form action="mailto:malikshoaibsultan732@gmail.com" method="post" enctype="text/plain">
-    <div class="form-group"><input type="text" name="name" placeholder="Name" required></div>
-    <div class="form-group"><input type="email" name="email" placeholder="Email" required></div>
-    <div class="form-group"><textarea name="message" rows="4" placeholder="Message" required></textarea></div>
-    <button type="submit" class="submit-btn">Send Message</button>
+ <form action="https://api.web3forms.com/submit" method="POST">
+  <input type="hidden" name="access_key" value="10636eb6-4728-4294-aa19-2b7e146934f5">
+  <input type="text" name="name" required>
+  <input type="email" name="email" required>
+  <textarea name="message" required></textarea>
+  <button type="submit">Submit Message</button>
 </form>
         <div class="footer-social">
             <a href="#"><i class="fa-brands fa-github"></i></a>
@@ -114,6 +115,7 @@
 </body>
 
 </html>
+
 
 
 
